--- a/LæreGreier/LæreGreier/LæreGreier.csproj
+++ b/LæreGreier/LæreGreier/LæreGreier.csproj
@@ -46,6 +46,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ferdigboks.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ferdigboks.Designer.cs">
+      <DependentUpon>ferdigboks.cs</DependentUpon>
+    </Compile>
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
