--- a/LæreGreier/LæreGreier/LæreGreier.csproj
+++ b/LæreGreier/LæreGreier/LæreGreier.csproj
@@ -128,6 +128,12 @@
   <ItemGroup>
     <None Include="Resources\Bock.jpg" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\HappyPepe.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\MadPepe.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
